--- a/index.html
+++ b/index.html
@@ -14,6 +14,10 @@
     <div> My Fav food is bat soup! </div>
 </body>
 
+<div> class = "Fav Movie!"
+    <p> My fav movie is scary movies 1-5!</p>
+</div>
+
 
 
 </html>
