Main branch, or me SLok P, added more to my teamates rude message lol

--- a/index.html
+++ b/index.html
@@ -18,6 +18,8 @@
     <p> My fav movie is scary movies 1-5!</p>
 </div>
 
-
+<div> class = "Bullying you class mate, JK!"
+    <p> I am your teamate, mwahahahah! Hey that not nice teamate - SP </p>
+</div>
 
 </html>
