--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <h1>Hello, World!</h1>
     <div>My name is Slok Patel</div>
     <div>My favorite hobby is Programming</div>
-    <div> My Fav food is bat soup! </div>
+    <div> My Fav food is money </div>
 </body>
 
 <div> class = "Fav Movie!"
@@ -20,6 +20,10 @@
 
 <div> class = "Bullying you class mate, JK!"
     <p> I am your teamate, mwahahahah! Hey that not nice teamate - SP </p>
+</div>
+
+<div>
+    <p> NSF </p>
 </div>
 
 </html>
